[gd_scene load_steps=2 format=3 uid="uid://rollhist01"]

[ext_resource type="Script" path="res://scripts/roll_history_panel.gd" id="1"]

[node name="RollHistoryPanel" type="PanelContainer"]
anchors_preset = 15
anchor_left = 0.0
anchor_right = 1.0
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
script = ExtResource("1")

[node name="HeaderBar" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 40)
anchor_right = 1.0

[node name="Title" type="Label" parent="HeaderBar"]
text = "Roll History"

[node name="Spacer" type="Control" parent="HeaderBar"]
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="HeaderBar"]
text = "âœ–"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_left = 0.0
anchor_right = 1.0
anchor_top = 0.0
anchor_bottom = 1.0
offset_top = 40.0
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="ScrollContainer"]
size_flags_horizontal = 3
